Style Fix boolean button spacing

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -774,14 +774,15 @@ header.terms + .two-columns {
             transition: all 0.2s;
             text-transform: uppercase;
             height: 3.25rem;
+            line-height: 1.5rem;
 
             &:hover {
-                border-color: #a27f1c;
+                border: 4px double #fff;
                 color: #fff;
                 opacity: 1;
             }
             &:active {
-                border-color: transparent !important;
+                border: 4px double #fff;
             }
         }
 
@@ -797,13 +798,10 @@ header.terms + .two-columns {
             letter-spacing: 0.0375rem;
             border: 4px double #fff;
             height: 3.25rem;
-            line-height: 1.5rem;
-
             &:hover {
-                border-color: #3f49b1;
             }
             &:active {
-                .header-icon svg {
+                .header-icon .icon {
                 }
             }
             .header-icon .icon {
